--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,12 @@
     "license": "ISC",
     "dependencies": {
         "dotenv": "^8.2.0",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "pg": "^8.5.1",
+        "pg-hstore": "^2.3.3",
+        "sequelize": "^6.5.1"
+    },
+    "devDependencies": {
+        "sequelize-cli": "^6.2.0"
     }
 }
