--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=3000
-DB_HOST='127.0.0.1'
+DB_HOST='localhost'
 // change this with your pg credentials
-DB_USERNAME='postgres' 
+DB_USERNAME=postgres 
 DB_PASSWORD='ij164691'
