--- a/backend/.env
+++ b/backend/.env
@@ -2,4 +2,4 @@ PORT=3000
 DB_HOST='localhost'
 // change this with your pg credentials
 DB_USERNAME=postgres 
-DB_PASSWORD='ij164691'
+DB_PASSWORD='postgres'
